@@ -1,6 +1,5 @@
 = Next Up
 
-* Don't .gitignore .rvmrc.
 * Remove Launchy? (Follow hub's lead.)
 * Start running on 1.9: Gem::Validator uses MiniTest::Unit.
 
