@@ -1,4 +1,3 @@
 .bundle
-.rvmrc
 *.gem
 rdoc
