@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.5
 .\" http://github.com/rtomayko/ronn/
 .
-.TH "SHOE" "3" "April 2010" "Matthew Todd" "RubyGems Manual"
+.TH "SHOE" "3" "September 2010" "Matthew Todd" "RubyGems Manual"
 .
 .SH "NAME"
 \fBshoe\fR \-\- standard Rake tasks for your RubyGems project
@@ -22,7 +22,7 @@ Gem::Specification, and they assume you are using \fBgit(1)\fR.
 .TP
 \fBrake clean\fR
 Remove ignored files. Calls something like \fBgit\-clean(1)\fR with the \fB\-fdX\fR
-options, honoring your \fBgitignore(5)\fR rules, but preserving \fB.bundle/\fR and \fB.rvmrc\fR.
+options, honoring your \fBgitignore(5)\fR rules, but preserving \fB.bundle/\fR.
 .
 .TP
 \fBrake compile\fR
